fix project size and overflow

--- a/styles/index.css
+++ b/styles/index.css
@@ -207,12 +207,13 @@ a:active {
 
 .projects {
     font-size: 3rem;
-    display: flex;
-    flex-direction: column;
+    height: 100%;
 }
 
 .project {
     height: 20%;
+    display: flex;
+    flex-direction: column;
 }
 
 .project-content {
